fix style probleme ios safari, not correctly interpret gap property with column-reverse

--- a/src/components/Actions/Actions.module.css
+++ b/src/components/Actions/Actions.module.css
@@ -36,11 +36,11 @@
 
 @media screen and (max-width: 600px) {
   .actions {
-    gap: 0.5rem;
-    flex-direction: column-reverse;
+    flex-direction: column;
+    gap: 1rem;
   }
 
-  .btn {
+  .actions > .btn {
     justify-content: center;
   }
 
